--- a/main.html
+++ b/main.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <title>Example Page</title>
+    <script src="script.js"></script>
+  </head>
+  <body>
+  </body>
 </html>
